page element positioning updated; white space overflow fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -144,7 +144,7 @@ h3 {
 
 #big-header h1 {
   color:#fff;
-  padding-top: 5%;
+  padding-top: 7%;
 }
 
 #big-header h3 {
